; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_http2client.c_close_connection.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_http2client.c_close_connection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_http2client_conn_t = type { %struct.TYPE_4__, %struct.TYPE_3__, i32 }
%struct.TYPE_4__ = type { i32, i32* }
%struct.TYPE_3__ = type { i32 }

@H2O_HTTP2CLIENT_CONN_STATE_IS_CLOSING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.st_h2o_http2client_conn_t*)* @close_connection to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @close_connection(%struct.st_h2o_http2client_conn_t* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.st_h2o_http2client_conn_t*, align 8
  store %struct.st_h2o_http2client_conn_t* %0, %struct.st_h2o_http2client_conn_t** %3, align 8
  %4 = load i32, i32* @H2O_HTTP2CLIENT_CONN_STATE_IS_CLOSING, align 4
  %5 = load %struct.st_h2o_http2client_conn_t*, %struct.st_h2o_http2client_conn_t** %3, align 8
  %6 = getelementptr inbounds %struct.st_h2o_http2client_conn_t, %struct.st_h2o_http2client_conn_t* %5, i32 0, i32 2
  store i32 %4, i32* %6, align 4
  %7 = load %struct.st_h2o_http2client_conn_t*, %struct.st_h2o_http2client_conn_t** %3, align 8
  %8 = getelementptr inbounds %struct.st_h2o_http2client_conn_t, %struct.st_h2o_http2client_conn_t* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = call i32 @h2o_socket_read_stop(i32 %10)
  %12 = load %struct.st_h2o_http2client_conn_t*, %struct.st_h2o_http2client_conn_t** %3, align 8
  %13 = getelementptr inbounds %struct.st_h2o_http2client_conn_t, %struct.st_h2o_http2client_conn_t* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %23, label %17

17:                                               ; preds = %1
  %18 = load %struct.st_h2o_http2client_conn_t*, %struct.st_h2o_http2client_conn_t** %3, align 8
  %19 = getelementptr inbounds %struct.st_h2o_http2client_conn_t, %struct.st_h2o_http2client_conn_t* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = call i64 @h2o_timer_is_linked(i32* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %17, %1
  br label %27

24:                                               ; preds = %17
  %25 = load %struct.st_h2o_http2client_conn_t*, %struct.st_h2o_http2client_conn_t** %3, align 8
  %26 = call i32 @close_connection_now(%struct.st_h2o_http2client_conn_t* %25)
  store i32 -1, i32* %2, align 4
  br label %28

27:                                               ; preds = %23
  store i32 0, i32* %2, align 4
  br label %28

28:                                               ; preds = %27, %24
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @h2o_socket_read_stop(i32) #1

declare dso_local i64 @h2o_timer_is_linked(i32*) #1

declare dso_local i32 @close_connection_now(%struct.st_h2o_http2client_conn_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
